# MedVoiceQAReasonDataset

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  registry.json
data/: huggingface_loader.py  sample_data.py
docs/: DevelopmentGuild.md  GoogleGenaiGuild.md  PromptCustomization.md
legacy/nodes/human_review/: human_review.py
models/: workflow.py
nodes/: __init__.py
nodes/asr_tts/: __init__.py  asr_tts.py
nodes/explanation/: __init__.py  explanation.py
nodes/human_review/: __init__.py  human_review.py
nodes/loader/: __init__.py  loader.py
nodes/segmentation/: __init__.py  segmentation.py
nodes/validation/: __init__.py  validation.py
notebook/: statistics.ipynb
pipeline/: __init__.py  graph.py  run_pipeline.py
prompts/: __init__.py  explanation.txt  prompt_manager.py  segmentation.txt  validation.txt
scripts/: __init__.py  test_runner.py
tests/: conftest.py  test_hf_integration.py  test_node_integration.py  test_pipeline.py  test_prompt_manager.py
ui/: README.md  __init__.py  launch.py  review_interface.py
