[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvoice-qa-reason-dataset"
version = "0.1.0"
description = "Transform VQA-RAD into a multi-modal, explainable medical-QA mini-corpus (speech + bounding box + reasoning)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MedVoiceQA Team", email = "team@medvoiceqa.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    # LLM orchestration
    "langchain[google-genai]>=0.3.0",
    "langgraph==0.4.5",
    "langsmith==0.3.42",
    "openai>=1.0.0",
    # Google Gen AI SDK (replaces the old google-generativeai)
    "google-genai>=1.0.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.3.0",
    "opencv-python>=4.11.0",
    # Hugging Face datasets
    "datasets>=2.14.0",
    # Audio synthesis & recognition
    "bark<=0.1.5",
    "openai-whisper>=20231117",
    "transformers>=4.48",
    "sentencepiece",
    # Medical image handling
    "pydicom>=2.4.0",
    "simpleitk>=2.5.0",
    # HTTP & config
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    # CLI & UX
    "typer>=0.9.0",
    "rich>=13.7.0",
    # Testing
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
ui = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "streamlit-plotly-events>=0.0.6",
]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]
cu118 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]
cu126 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]

[tool.uv]
conflicts = [
  [ { extra = "cpu"   }, { extra = "cu118" } ],
  [ { extra = "cpu"   }, { extra = "cu126" } ],
  [ { extra = "cpu"   }, { extra = "cu128" } ],
  [ { extra = "cu118" }, { extra = "cu126" } ],
  [ { extra = "cu118" }, { extra = "cu128" } ],
  [ { extra = "cu126" }, { extra = "cu128" } ],
]

[project.scripts]
medvoice-pipeline = "pipeline.run_pipeline:main"
medvoice-test = "scripts.test_runner:main"
medvoice-ui = "ui.launch:main"

[project.urls]
Homepage = "https://github.com/whats2000/MedVoiceQAReasonDataset"
Repository = "https://github.com/whats2000/MedVoiceQAReasonDataset"
Issues = "https://github.com/whats2000/MedVoiceQAReasonDataset/issues"

[tool.setuptools]
packages = ["pipeline", "nodes", "models", "data", "scripts", "ui"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# 1) Declare your indexes
[[tool.uv.index]]
name    = "pypi"
url     = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu126"
url      = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

# 2) Tell uv where to look for each PyTorch package
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
]
